# qr-code-generator

./: app.py  pyproject.toml
